[project]
name = "BitlyReader"
version = "1.0.0"
description = "A world-class interactive CLI tool to consume, shorten, and export Bitly link data and analytics."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "alexoat76"},
]
keywords = ["bitly", "api", "cli", "shortener", "link-analytics"]
dependencies = [
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[project.scripts]
BitlyReader = "main:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["main", "client", "exporter"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0.20240406",
    "ruff>=0.15.14",
]

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "D",    # pydocstyle (docstring conventions)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module (we use file-level docstrings)
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line (conflicts with D212)
    "S101",  # Use of assert (needed in tests)
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D", "S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
